--- a/rock,paper,scissor/style.css
+++ b/rock,paper,scissor/style.css
@@ -1,47 +1,8 @@
-/* #buttom {
-    height: 40px;
-    width: 100px;
-    background-color: papayawhip;
-    border-radius: 20px;
-    border-color: pink;
-}
-
-.moviebox {
-    padding: 0 2rem;
-    padding-bottom: 2rem;
-    width: 350px;
-    border: 4px solid #000;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(black, #333);
-    color: whitesmoke;
-
-}
-
-h1 {
-    font-family: sans-serif;
-    font-weight: 800;
-}
-
-ul {
-    list-style-type: none;
-}
-
-.moviebox li {
+* {
     margin: 0;
-    margin-left: -40px;
-    width: 330px;
-    height: 30px;
-    border: 1px solid black;
-    background-color: white;
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
+    padding: 0;
+    box-sizing: border-box;
+}
 
 .canvas {
     width: 100vw;
@@ -50,6 +11,8 @@ ul {
     align-items: center;
     justify-content: center;
     text-align: center;
+    background: url(images/milad-fakurian-PGdW_bHDbpI-unsplash.jpg) center no-repeat;
+    background-size: cover;
 }
 
 .container {
@@ -67,16 +30,17 @@ h2 {
 
 .result {
     position: absolute;
-    width: 350px;
+    width: 500px;
     height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: papayawhip;
-    border: 2px solid rgb(255, 0, 0);
+    background-color: rgb(227, 227, 227);
+    background-size: cover;
+    border: 2px solid rgb(138, 138, 138);
     border-radius: 10px;
-    transform: translate(-10px, -50px);
+    transform: translate(-10px, -30px);
     box-shadow: 1px 2px 15px 5px rgba(193, 193, 193, 0.709);
 }
 
@@ -85,19 +49,29 @@ h2 {
 }
 
 button {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
+    opacity: 70%;
+    backdrop-filter: blur(10px);
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.container button:hover {
+    background-color: rgb(95, 199, 255);
+    border: none;
+    box-shadow: 0 0 15px 5px rgba(107, 107, 107, 0.574);
+    text-shadow: 0px 0px 5px black;
 }
 
 img {
-    height: 60px;
+    height: 90px;
 }
 
-#submitt {
-    height: 35px;
-}
 
 #retry {
+    opacity: 100%;
+    z-index: 100;
     width: 130px;
     height: 35px;
     color: white;
@@ -108,7 +82,14 @@ img {
     background: linear-gradient(to bottom, rgb(255, 159, 159), rgb(185, 0, 0));
 }
 
-@media screen and (max-width:300px) {
+#retry:hover,
+#retry:focus {
+    width: 150px;
+    height: 40px;
+}
+
+
+@media screen and (max-width:550px) {
     .container {
         display: flex;
         flex-direction: column;
@@ -116,21 +97,22 @@ img {
     }
 
     .result {
-        width: 250px;
-        height: 330px;
-        transform: translate(-90px, 0px);
+        width: 300px;
+        height: 550px;
+        transform: translate(-80px, -20px);
+        line-height: 5rem;
     }
 }
 
-@media screen and (min-width:500px) {
+@media screen and (min-width:800px) {
     button {
-        width: 160px;
-        height: 160px;
+        width: 200px;
+        height: 200px;
     }
 
     .result {
-        width: 520px;
-        height: 240px;
-        transform: translate(-10px, -50px);
+        width: 650px;
+        height: 260px;
+        transform: translate(-10px, -30px);
     }
 }
